# Mining

./: .coderabbit.yaml  .gitignore  .goreleaser.yaml  AGENTS.md  AUDIT-COMPLEXITY.md  AUDIT-CONCURRENCY.md  AUDIT-DOCUMENTATION.md  AUDIT-ERROR-HANDLING.md  AUDIT-INPUT-VALIDATION.md  AUDIT-MEMORY.md  AUDIT-PERFORMANCE.md  AUDIT-PROTOCOL.md  AUDIT-SECRETS.md  AUDIT-TESTING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_PARALLEL.md  CONTRIBUTORS.md  Dockerfile.node  LICENSE  MKDOCS_SETUP.md  Makefile  PARALLEL_CODE_REVIEW.md  README.md  docker-compose.p2p.yml  go.mod  go.sum  main.go  mkdocs.yml  openapi-3.json
.claude/: multi-node.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: desktop-release.yml  docs.yml  e2e.yml  miner-release.yml  release.yml  test.yml
cmd/desktop/mining-desktop/: Taskfile.yml  go.mod  go.sum  main.go  miningservice.go
cmd/mining/: main.go
cmd/mining/cmd/: doctor.go  install.go  list.go  node.go  peer.go  remote.go  root.go  serve.go  simulate.go  start.go  status.go  stop.go  uninstall.go  update.go
docs/: 00-START-HERE.md  API.md  ARCHITECTURE.md  CLI.md  CODE_REVIEW_109.md  DEVELOPMENT.md  FILES-INDEX.md  FUTURE_IDEAS.md  MANIFEST.md  POOL-RESEARCH-README.md  QUICK-REFERENCE.md  README.md  RESEARCH-SUMMARY.txt  docs.go  index.md  pool-integration-guide.md  pool-research.md  requirements.txt  swagger.json  swagger.yaml  xmr-pools-database.json
docs/api/: endpoints.md  index.md  swagger.md
docs/development/: architecture.md  contributing.md  index.md
docs/getting-started/: index.md  quick-start.md
docs/reference/: algorithms.md  pools.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  desktop-app.md  web-dashboard.md
miner/: NOTICE  README.md
miner/config/: CLAUDE.md  package.json
miner/core/: CLAUDE.md  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_TODO.md  README.md  README_TESTING.md  TODO.md
miner/core/cmake/: blake3dcr.cmake  etchash.cmake  progpowz.cmake
miner/core/src/: App.cpp  App.h  App_unix.cpp  App_win.cpp  Summary.cpp  donate.h  version.h
miner/core/tests/: CMakeLists.txt
miner/core/tests/benchmark/: CMakeLists.txt  test_performance.cpp
miner/core/tests/integration/: CMakeLists.txt  test_mining_integration.cpp
miner/core/tests/unit/: CMakeLists.txt
miner/core/tests/unit/backend/: CMakeLists.txt  test_cpu_worker.cpp
miner/core/tests/unit/config/: CMakeLists.txt  test_config.cpp
miner/core/tests/unit/crypto/: CMakeLists.txt  test_cryptonight.cpp  test_memory_pool.cpp  test_randomx_benchmark.cpp
miner/core/tests/unit/net/: CMakeLists.txt  test_job_results.cpp  test_stratum.cpp
miner/cuda/: CLAUDE.md  CMakeLists.txt  TODO.md
miner/cuda/src/: miner-cuda.cpp  version.h
miner/heatmap/: CLAUDE.md  CMakeLists.txt
miner/heatmap/src/: version.h
miner/proxy/: CLAUDE.md  CMakeLists.txt  CODE_REVIEW_TODO.md  README.md  README_TESTS.md  TODO.md
miner/proxy/src/: App.cpp  App_unix.cpp  App_win.cpp  donate.h  version.h
miner/proxy/tests/: CMakeLists.txt
miner/proxy/tests/integration/: test_event_system.cpp  test_splitter_nicehash.cpp  test_splitter_simple.cpp
miner/proxy/tests/unit/: test_counters.cpp  test_custom_diff.cpp  test_error.cpp  test_login.cpp  test_nonce_mapper.cpp  test_worker.cpp
miner/proxy/tests/utils/: test_helpers.cpp  test_helpers.h
miner/workers/: CLAUDE.md  package-lock.json  package.json
pkg/database/: database.go  database_race_test.go  database_test.go  hashrate.go  interface.go  interface_test.go  session.go
pkg/mining/: auth.go  auth_test.go  bufpool.go  circuit_breaker.go  circuit_breaker_test.go  component.go  config_manager.go  container.go  container_test.go  dual_mining_test.go  errors.go  errors_test.go  events.go  events_test.go  file_utils.go  manager.go  manager_interface.go  manager_race_test.go  manager_test.go  metrics.go  miner.go  miner_factory.go  miner_factory_test.go  mining.go  mining_profile.go  mining_test.go  node_service.go  profile_manager.go  profile_manager_test.go  ratelimiter.go  ratelimiter_test.go  repository.go  repository_test.go  service.go  service_test.go  settings_manager.go  settings_manager_test.go  simulated_miner.go  stats_collector.go  stats_collector_test.go  (+13 more)
pkg/mining/component/: mining-dashboard.js
pkg/node/: bundle.go  bundle_test.go  control.go  controller.go  dispatcher.go  identity.go  identity_test.go  message.go  message_test.go  msg_dispatcher.go  peer.go  peer_test.go  transport.go  worker.go  worker_test.go
pkg/ueps/: packet.go
site-docs/: index.md
site-docs/about/: changelog.md  claude.md
site-docs/api/: endpoints.md  rest-api.md
site-docs/architecture/: backend.md  frontend.md  overview.md
site-docs/cli/: commands.md  examples.md
site-docs/development/: building.md  contributing.md
site-docs/features/: console.md  dashboard.md  history.md  multi-miner.md  p2p-multinode.md  profiles.md
site-docs/getting-started/: configuration.md  installation.md  quickstart.md
site-docs/ui/: overview.md  screenshots.md
ui/: .gitignore  README.md  angular.json  package-lock.json  package.json  playwright.config.ts
ui/e2e/api/: history.api.spec.ts  miners.api.spec.ts  profiles.api.spec.ts  system.api.spec.ts
ui/e2e/fixtures/: test-data.ts
ui/e2e/page-objects/: console.page.ts  dashboard.page.ts  graphs.page.ts  main-layout.page.ts  miners.page.ts  pools.page.ts  profile-create.page.ts  profile-list.page.ts  profiles-new.page.ts  workers.page.ts
ui/e2e/ui/: admin.e2e.spec.ts  console.e2e.spec.ts  dashboard.e2e.spec.ts  features.e2e.spec.ts  mining-flow.e2e.spec.ts  mining-long.e2e.spec.ts  navigation.e2e.spec.ts  profiles.e2e.spec.ts  setup-wizard.e2e.spec.ts  start-miner.e2e.spec.ts  (+1 more)
ui/playwright-report/: index.html
ui/src/: index.html  main.ts  styles.css
(+192 files in other folders)
